tests/rosetta/out/Smalltalk/99-bottles-of-beer.out
/tmp/99-bottles-of-beer.st:12: parse error, expected ']'
