tests/rosetta/out/Smalltalk/99-bottles-of-beer.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| bottles main i |
bottles := [:n | ((n = 0)) ifTrue: [
'No more bottles'.
] .
((n = 1)) ifTrue: [
'1 bottle'.
] .
(((n asString)) + (' bottles')). ].
main := [ i := 99.
[(i > 0)] whileTrue: [.
Transcript show: (((bottles value: i) + (' of beer on the wall'))) printString; cr.
Transcript show: (((bottles value: i) + (' of beer'))) printString; cr.
Transcript show: 'Take one down, pass it around'; cr.
Transcript show: (((bottles value: (i - 1)) + (' of beer on the wall'))) printString; cr.
i := (i - 1).
].
. ].
main value.
